# py-DoubletFinder

./: .gitignore  LICENSE  README.md  pyproject.toml
doubletfinder_py/: __init__.py  bimodality.py  doubletfinder.py  kde.py
examples/: benchmark.py  compare_R_vs_Python.executed.ipynb  compare_R_vs_Python.ipynb  r_driver_pbmc3k.R  tutorial_standalone.py
pydoubletfinder/: __init__.py  core.py  doubletfinder.py  preprocessing.py
tests/: r_reference_driver.R  test_exact_match.py  test_kde_parity.py  test_smoke.py
